syntax = "proto3";

//
//  File:    holocanvas.proto
//  Project: HoloCanvas – A Micro-Gallery Blockchain for Generative Artifacts
//
//  Summary:
//      Core cross-service protocol definitions.  All micro-services—Cryptograph,
//      LedgerCore, MintFactory, GalleryGateway, DeFiGarden, OracleBridge,
//      WalletProxy, and GovernanceHall—share this file to guarantee binary
//      compatibility across language stacks (C, Go, Rust, TS, …).
//
//      The protocol is designed for high-throughput event streaming while still
//      allowing fine-grained, request/response RPCs where appropriate.
//      Multiplexed topic identifiers (topic_id) let a single bidirectional
//      stream carry heterogeneous event types without sacrificing strong type
//      safety.
//
//  Notes:
//      1. All domain objects include an immutable uuid and a RFC-3339 timestamp.
//      2. Blockchain “block_height” indexes finalized state on the roll-up
//         layer.  A value of 0 means “pending / mem-pool”.                 ]:-)
//
//  Copyright © 2023-2024 The HoloCanvas Authors.
//

package holocanvas.v1;

option csharp_namespace  = "HoloCanvas.Proto";
option java_package      = "com.holocanvas.proto.v1";
option go_package        = "github.com/holocanvas/proto/gen/go/holocanvas/v1;holocanvasv1";
option objc_class_prefix = "HCX";

// ---------------------------------------------------------------------------
// Google Well-Known Types
// ---------------------------------------------------------------------------
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

// ---------------------------------------------------------------------------
// ENUMERATIONS
// ---------------------------------------------------------------------------

enum ArtifactState {
    ARTIFACT_STATE_UNSPECIFIED  = 0;
    ARTIFACT_STATE_DRAFT        = 1;
    ARTIFACT_STATE_CURATED      = 2;
    ARTIFACT_STATE_AUCTION      = 3;
    ARTIFACT_STATE_FRACTIONAL   = 4;
    ARTIFACT_STATE_STAKED       = 5;
    ARTIFACT_STATE_ARCHIVED     = 6;
}

enum MediaKind {
    MEDIA_KIND_UNSPECIFIED = 0;
    MEDIA_KIND_SHADER      = 1;   // GLSL / WGSL fragment
    MEDIA_KIND_AUDIO       = 2;   // WebAudio / MIDI
    MEDIA_KIND_METADATA    = 3;   // JSON-LD, IPFS CID, etc.
}

enum GovernanceAction {
    GOVERNANCE_ACTION_UNSPECIFIED = 0;
    GOVERNANCE_ACTION_MINT_RIGHTS = 1;
    GOVERNANCE_ACTION_CURATE      = 2;
    GOVERNANCE_ACTION_EVOLVE      = 3;
    GOVERNANCE_ACTION_FREEZE      = 4;
    GOVERNANCE_ACTION_BURN        = 5;
}

// ---------------------------------------------------------------------------
// CORE DOMAIN OBJECTS
// ---------------------------------------------------------------------------

// A cryptographically provable identity (wallet, service, or DAO).
message Principal {
    string  did           = 1;  // W3C Decentralized Identifier, e.g. "did:key:…"
    bytes   public_key    = 2;  // Raw secp256k1 key bytes
    string  alias         = 3;  // Human-friendly label
}

// Represents a single layer of media inside an Artifact.
message MediaLayer {
    string      uuid            = 1;  // Layer UUID
    MediaKind   kind            = 2;
    string      content_uri     = 3;  // IPFS / Arweave / HTTPS URI
    bytes       content_hash    = 4;  // SHA-256 digest of raw bytes
    uint32      ordinal         = 5;  // Z-index for compositing
    google.protobuf.Timestamp created_at = 6;
}

// Immutable recipe captured at mint-time.
message ArtifactRecipe {
    string                        uuid          = 1;
    repeated MediaLayer           layers        = 2;
    google.protobuf.Struct        metadata      = 3;  // Arbitrary creator-supplied JSON
    string                        factory_addr  = 4;  // On-chain smart-contract address
    google.protobuf.Timestamp     created_at    = 5;
}

// NFT Artifact tracked on-chain.
message Artifact {
    string               uuid           = 1;
    ArtifactState        state          = 2;
    ArtifactRecipe       recipe         = 3;
    Principal            owner          = 4;
    uint64               block_height   = 5;  // 0 => pending
    google.protobuf.Timestamp updated_at = 6;
}

// Generic financial amount in Wei, USD-cents, etc.
message Amount {
    string  currency = 1; // e.g. "wei", "usdc"
    uint64  value    = 2;
}

// Bid placed during Auction state.
message Bid {
    string                   uuid         = 1;
    string                   artifact_uuid= 2;
    Principal                bidder       = 3;
    Amount                   amount       = 4;
    google.protobuf.Timestamp placed_at   = 5;
}

// Staking position.
message Stake {
    string                   uuid          = 1;
    string                   artifact_uuid = 2;
    Principal                staker        = 3;
    Amount                   amount        = 4;
    uint32                   lock_days     = 5;
    google.protobuf.Timestamp staked_at    = 6;
}

// Governance proposal document.
message GovernanceProposal {
    string                       uuid            = 1;
    string                       artifact_uuid   = 2;
    GovernanceAction             action          = 3;
    google.protobuf.Struct       params          = 4;  // action-specific
    Principal                    proposer        = 5;
    google.protobuf.Timestamp    submitted_at    = 6;
    repeated GovernanceVote      votes           = 7;
}

// Individual vote.
message GovernanceVote {
    Principal                    voter        = 1;
    bool                         approve      = 2;
    google.protobuf.Timestamp    cast_at      = 3;
}

// Data injected by external oracle feeds.
message OracleEvent {
    string                       uuid          = 1;
    string                       source        = 2; // e.g. "openweather"
    google.protobuf.Struct       payload       = 3;
    google.protobuf.Timestamp    observed_at   = 4;
}

// ---------------------------------------------------------------------------
// TRANSACTION ENVELOPE
// ---------------------------------------------------------------------------

// Unified event wrapper for streaming across Kafka / gRPC.
message CanvasEvent {
    string   uuid        = 1;
    oneof    body {
        Artifact            artifact              = 10;
        Bid                 bid                   = 11;
        Stake               stake                 = 12;
        GovernanceProposal  proposal              = 13;
        OracleEvent         oracle                = 14;
    }
    // Topic to aid in routing through pub/sub fabric.
    string   topic_id    = 20; // e.g. "artifact.{uuid}" or "governance.global"
    uint64   block_height= 21;
    google.protobuf.Timestamp emitted_at = 22;
}

// ---------------------------------------------------------------------------
// SERVICE APIs
// ---------------------------------------------------------------------------

// 1. Factory Pattern – composable mint pipeline.
service MintFactory {
    // Mint a brand-new Artifact from a recipe.
    rpc Mint(ArtifactRecipe) returns (Artifact);

    // Retrieve an existing Artifact (regardless of state).
    rpc GetArtifact(GetArtifactRequest) returns (Artifact);

    // Subscribe to live state transitions for a specific Artifact.
    rpc WatchArtifact(WatchArtifactRequest) returns (stream CanvasEvent);
}

message GetArtifactRequest {
    string artifact_uuid = 1;
}

message WatchArtifactRequest {
    string artifact_uuid = 1;
}

// 2. LedgerCore – canonical blockchain interface (light wrapper around rollup node).
service LedgerCore {
    // Append a signed transaction to the roll-up mem-pool.
    rpc SubmitEvent(CanvasEvent) returns (SubmitEventResponse);

    // Stream finalized blocks for indexing or archival.
    rpc StreamBlocks(StreamBlocksRequest) returns (stream CanvasEvent);
}

message SubmitEventResponse {
    string  tx_hash      = 1;
    uint64  mempool_seq  = 2;
}

message StreamBlocksRequest {
    uint64 from_block = 1;
}

// 3. DeFiGarden – staking & fractionalization hub.
service DeFiGarden {
    rpc StakeArtifact(Stake) returns (Stake);
    rpc Unstake(UnstakeRequest) returns (Stake);
    rpc WatchStakes(WatchStakesRequest) returns (stream Stake);
}

message UnstakeRequest {
    string stake_uuid = 1;
}

message WatchStakesRequest {
    string artifact_uuid = 1;
}

// 4. GovernanceHall – DAO governance portal.
service GovernanceHall {
    rpc Propose(GovernanceProposal) returns (GovernanceProposal);
    rpc Vote(GovernanceVote) returns (GovernanceProposal);
    rpc WatchGovernance(WatchGovernanceRequest) returns (stream GovernanceProposal);
}

message WatchGovernanceRequest {
    string artifact_uuid = 1; // empty = global stream
}

// 5. OracleBridge – gateway for external data feeds.
service OracleBridge {
    rpc InjectOracleData(OracleEvent) returns (OracleEvent);
    rpc WatchOracle(WatchOracleRequest) returns (stream OracleEvent);
}

message WatchOracleRequest {
    string source = 1; // empty = all
}

// 6. WalletProxy – abstraction layer for user wallets.
service WalletProxy {
    rpc SignAndSubmit(SignedPayload) returns (SubmitEventResponse);
    rpc GetBalance(GetBalanceRequest) returns (Amount);
}

message SignedPayload {
    bytes  payload   = 1;
    bytes  signature = 2;
}

message GetBalanceRequest {
    Principal account = 1;
}

// 7. GalleryGateway – read-only aggregation for UI/REST.
service GalleryGateway {
    rpc ListArtifacts(ListArtifactsRequest) returns (stream Artifact);
}

message ListArtifactsRequest {
    ArtifactState state_filter = 1; // UNSPECIFIED = all
}

// ---------------------------------------------------------------------------
// BACKWARD-COMPATIBILITY NOTES
// ---------------------------------------------------------------------------
// • Whenever you need to remove a field, use the “reserved” keyword to prevent
//   accidental reuse.  (See Proto3 versioning guide.)
// • Keep numeric tags stable once published.
// ---------------------------------------------------------------------------